...
    "title": "New terms and conditions",
    "explanation_markdown": "The management of Yivi has recently been transferred to another organization ([Yivi B.V.](https://yivi.app/en/about_yivi)).\n\nTherefore, the terms and conditions have changed slightly.\n\nWe ask you to [read them]({terms_url}) and agree to them below.",
    "accept": "Accept",
    "dismiss": "Not now"
  },
  "action_feedback": {
    "ok": "OK"
  },
  "activity": {
    "data_deleted": "Data deleted",
    "data_deleted_semantics": "Data deleted from {issuerName} on {date}",
    "data_received": "Data received",
    "data_received_semantics": "Data received from {otherParty} on {date}",
...
    "sharable": "Sharable",
    "sharable_count": "{count} times left",
    "sharable_unlimited": "Unlimited",
    "options": {
      "title": "Options",
      "reobtain": "Reobtain",
      "delete": "Delete data",
      "confirm_delete": "Are you sure you want to delete this data?",
      "delete_success": "Success! The data has been deleted."
    },
    "about_to_expire": "About to expire",
    "expired": "Expired",
    "revoked": "Revoked",
...
      "decline": "Don't share",
      "decline_signature": "Don't sign"
    },
    "confirm_close_dialog": {
      "title": "Cancel sharing data?",
      "explanation": "Are you sure you don't want to share your data?",
      "confirm": "Yes",
      "decline": "No"
    },
    "wrong_credentials_added": {
      "title": "Error",
      "explanation": "Data has been added to the app, but they do not meet the requested criteria. Please obtain the right data.",
      "dismiss_action": "OK"
...
    "security_and_privacy": "Security and privacy"
  },
  "home": {
    "nav_bar": {
      "data": "Data",
      "activity": "Activity",
      "notifications": "Notifications",
      "more": "More",
      "scan_qr": "Scan QR"
    },
    "nav_bar_hints": {
      "data": "tab 1 out of 4",
      "activity": "tab 2 out of 4",
...
    "step": "Step",
    "done": "Done",
    "next": "Next",
    "previous": "Previous",
    "cancel": "Cancel",
    "confirm": "Confirm",
    "delete": "Delete",
    "skip": "Skip",
    "continue": "Continue",
    "retry": "Try again",
    "error": "Something went wrong",
    "end_of_list": "You have reached the end of the list",
    "unknown": "Unknown",
...
    "title": "Do you remember us?",
    "header": "IRMA has a new name and a new look: Yivi",
    "explanation": "Everything remained the same under the hood, you can log in with your old PIN code."
  },
  "notifications": {
    "title": "Notifications",
    "empty": "No notifications",
    "credential_status": {
      "revoked": {
        "title": "Data revoked",
        "message": "{issuerName} has revoked this data: {credentialName}"
      },
      "expired": {
...
