...
      ),
      child: Row(
        crossAxisAlignment: CrossAxisAlignment.center,
        mainAxisAlignment: MainAxisAlignment.spaceAround,
        children: [
          IrmaNavButton(
            key: const Key("nav_button_data"),
            iconData: selectedTab == IrmaNavBarTab.data
                ? Icons.person
                : Icons.person_outline,
            tab: IrmaNavBarTab.data,
            changeTab: onChangeTab,
            isSelected: IrmaNavBarTab.data == selectedTab,
          ),
          IrmaNavButton(
            key: const Key("nav_button_activity"),
            iconData: Icons.history,
            tab: IrmaNavBarTab.activity,
            changeTab: onChangeTab,
            isSelected: IrmaNavBarTab.activity == selectedTab,
          ),
          // Spacing for the QR scan button
...
            tab: IrmaNavBarTab.notifications,
            builder: _buildNotificationsIcon,
            changeTab: onChangeTab,
            isSelected: IrmaNavBarTab.notifications == selectedTab,
          ),
          IrmaNavButton(
            key: const Key("nav_button_more"),
            iconData: Icons.more_horiz,
            tab: IrmaNavBarTab.more,
            changeTab: onChangeTab,
            isSelected: IrmaNavBarTab.more == selectedTab,
          ),
        ],
...
