...
          showOverlay: true,
          onSuccess: (mrzResult, lines) async {
            widget.onSuccess(mrzResult);
          },
        ),
        floatingActionButton: _ManualEntryButton(
          key: const Key('bottom_bar_primary'),
          onTap: widget.onManualAdd,
        ),
      );
    });
  }
}
...
